style(repo-details): fixed wrapping tags with homepage link

--- a/src/features/repo-details/index.scss
+++ b/src/features/repo-details/index.scss
@@ -1,4 +1,8 @@
 .common-details {
+    .homepage-link {
+        display: block;
+    }
+
     .language-tag {
         margin-bottom: 4px;
     }
